# LLM-Reasoning-Depth-Breadth-Eval

./: .env.example  .gitignore  README.md  chat_history.md  chat_history_2024211330.md  llm_eval_dashboard_v1.html  llm_reasoning_analysis_dashboard.html  llm_reasoning_outputs_visualization.html  llm_reasoning_tree_analyzer_v2.html  llm_tradeoff_scatter_v3.html  pyproject.toml  requirements.txt  visualization_prompt.txt
data/: example.json
data/model_outputs/: demo_model_outputs.jsonl  gsm8k_20_outputs.jsonl
data/processed/: demo_benchmark.jsonl
data/raw/: demo_raw_rules.jsonl
docs/: delivery.md  graph_builder_README.md  graph_builder_design.md  human_audit.md  model_test_usage.md  reasoning_depth_breadth_project_report.md  reference_design.md  scoring.md
outputs/reports/: api_summary.csv  gsm8k_20_summary.csv  (+2 more)
scripts/: 01_build_dataset.py  02_run_model_api.py  02_run_model_demo.py  03_score_outputs.py  04_analyze_results.py  05_visualize_outputs.py  bench_gsm8k.py  bench_gsm8k_v2.py  bench_omni_v2.py  bench_v2.py  build_harness_dag.py  build_omni_math_graphs.py  collect_benchmark.py  fix_and_push.sh  launch_all.py  launch_benchmark.sh  rebuild_results.py  run_all_demo.py  run_gsm8k.sh  run_gsm8k_api.py  run_gsm8k_pipeline.py  run_model_test.py  run_qwen_benchmark.py  summarize.py
tests/: test_breadth_scorer.py  test_consistency_scorer.py  test_dag_lighter.py  test_dataset_dag_builder.py  test_depth_scorer.py  test_graph_builder.py  test_harness.py  test_mapper.py  test_omni_math.py  test_sentence_parser.py  test_step_splitter.py  test_verifier.py
(+121 files in other folders)
