[project]
name = "reasoning-graph-builder"
version = "0.1.0"
description = "GSM8K parsing and reasoning graph construction for LLM process evaluation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.20.0",
]

[project.scripts]
reasoning-graph = "reasoning_graph.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
